<resources>
    <string name="app_name">Archeological Fieldwork</string>
    <string name="app_created_by">App created by:</string>
    <string name="my_name">Bence Jójárt</string>
    <string name="my_email">jojart.bence96@gmail.com</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_login">Log in</string>
    <string name="hint_siteTitle">Site title</string>
    <string name="hint_siteDescription">Description</string>
    <string name="hint_visited">Visited</string>
    <string name="hint_date_visited">Date (dd.MM.yyyy)</string>
    <string name="hint_additional_notes">Additional notes</string>
    <string name="button_addImage">Add Image</string>
    <string name="menu_addSite">Add site</string>
    <string name="menu_logout">Log out and quit</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_mapOfAllSites">Map of all sites</string>
    <string name="menu_favourites">Favourite sites</string>
    <string name="menu_siteList">List of sites</string>
    <string name="site_saveSite">Save</string>
    <string name="site_deleteSite">Delete</string>
    <string name="site_markAsFavourite">Mark as favourite</string>
    <string name="site_shareEmail">Share site in Email</string>
    <string name="site_goToNavigator">Navigate me there</string>
    <string name="toast_enter_site_title">Please enter a title</string>
    <string name="toast_wrong_date_format">Wrong date format</string>
    <string name="toast_could_not_load_date">Could not load date, set to default</string>
    <string name="image_picker_select_image">Select image</string>
    <string name="settings_account_name">Logged in as: </string>
    <string name="settings_total_sites">Total number of sites:</string>
    <string name="settings_visited_sites">Number of visited sites:</string>
    <string name="hint_search_title">Search based on title</string>
    <string name="navigator_your_location">Your location</string>
    <string name="navigator_site_default_title">Site</string>
    <string name="navigator_site_location">Site location</string>
</resources>
